syntax = "proto3";

package calculator;

option go_package = "github.com/LeQuanHuyHoang/grpc-go-course/calculator/proto";

message  SumRequest {
  int32 first_number = 1;
  int32 second_number = 2;
}

message SumResponse {
  int32 sum = 1;
}

message PrimeRequest {
  int32 number = 1;
}

message PrimeResponse {
  int32 result=1;
}

message AverageRequest {
  int32 number = 1;
}

message AverageResponse {
  double result=1;
}